# md_front_pages

./: README.md  config.py  main.py  pyproject.toml  yaml_frontmatter
functions/: __init__.py  at_exit_output.py  check_internet_connected.py  create_latest_md_title.py  debug_functions.py  extract_metadata_vars.py  get_latest_url.py  process_latest_md_content.py  process_latest_md_title.py  update_yaml.py
