[project]
name = "md-playbook_1.3"
version = "0.1.3"
description = "Creates markdown page of latest BBC front pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "markitdown>=0.0.2",
    "numpy<2.0",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
