[project]
name = "md-front_pages"
version = "1.0.0"
description = "Creates markdown page of latest BBC front pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "markitdown>=0.0.2",
    "numpy<2.0",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "utils",
]

[tool.uv.sources]
utils = { git = "https://github.com/jedshed/utils" }
